--- a/chat-extensions/views/index.ejs
+++ b/chat-extensions/views/index.ejs
@@ -7,7 +7,6 @@
   </head>
   <body>
     <div id="content"></div>
-    <div id="console"></div>
     <script>
     <% if (demo) { %>
       // Use a random demo ID when viewing locally.
@@ -19,6 +18,7 @@
           '1505142452961271',
           function success(context) {
             console.log('success');
+            console.log(typeof context);
             console.log(context);
             window.attachApp(
               context.psid,
@@ -42,13 +42,6 @@
         js.src = sdkURL;
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'Messenger'));
-      const consoleElement = document.getElementById('console');
-      
-      var originallog = console.log;
-      console.log = txt => {
-        consoleElement.innerHTML += "\n" + txt;
-        originallog.apply(console, arguments);
-      };
     </script>
   </body>
 </html>
